# konvert

./: .gitignore  README.md  convert_file.py  inp.py  k_reading.py  main.py  pyproject.toml  tools.py  unv.py  unv_writing.py
format_files/: inp.py  unv.py
src/konvert/: __main__.py  cli.py  convert_file.py  k_reading.py  module.py
src/konvert/format_files/: inp.py
