[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "konvert"
version = "0.0.1"

dependencies = [
    "typer >= 0.19.2",
]

requires-python = ">= 3.11"

authors = [
    {name = "Eliott Muller"}
]
maintainers = [
    {name = "Eliott Muller"}
]

description = "An LS-Dyna keyword mesh converter"

readme = "README.md"

license = "GPL-3.0-or-later"

[project.scripts]
konvert = "konvert.cli:app"
